@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2020, 2023 IBM Corporation and others.
+ * Copyright (c) 2020, 2024 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -15,16 +15,16 @@ package org.eclipse.jdt.core.tests.compiler.regression;
 import java.io.File;
 import java.io.IOException;
 import java.util.Map;
-
+import junit.framework.Test;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.jdt.core.JavaCore;
 import org.eclipse.jdt.core.ToolFactory;
+import org.eclipse.jdt.core.tests.compiler.regression.AbstractRegressionTest.JavacTestOptions.Excuse;
+import org.eclipse.jdt.core.tests.compiler.regression.AbstractRegressionTest.JavacTestOptions.JavacHasABug;
 import org.eclipse.jdt.core.tests.util.Util;
 import org.eclipse.jdt.core.util.ClassFileBytesDisassembler;
 import org.eclipse.jdt.core.util.ClassFormatException;
 import org.eclipse.jdt.internal.compiler.impl.CompilerOptions;
-
-import junit.framework.Test;
 
 public class SealedTypesTests extends AbstractRegressionTest9 {
 
@@ -44,6 +44,19 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 		super(testName);
 	}
 
+	// ========= OPT-IN to run.javac mode: ===========
+	@Override
+	protected void setUp() throws Exception {
+		this.runJavacOptIn = true;
+		super.setUp();
+	}
+	@Override
+	protected void tearDown() throws Exception {
+		super.tearDown();
+		this.runJavacOptIn = false; // do it last, so super can still clean up
+	}
+	// =================================================
+
 	// Enables the tests to run individually
 	protected Map<String, String> getCompilerOptions() {
 		Map<String, String> defaultOptions = super.getCompilerOptions();
@@ -53,6 +66,13 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 		defaultOptions.put(CompilerOptions.OPTION_ReportPreviewFeatures, CompilerOptions.IGNORE);
 		defaultOptions.put(CompilerOptions.OPTION_Store_Annotations, CompilerOptions.ENABLED);
 		return defaultOptions;
+	}
+
+	class Runner extends AbstractRegressionTest.Runner {
+		Runner() {
+			this.vmArguments = new String[0];
+			this.javacTestOptions = JavacTestOptions.DEFAULT;
+		}
 	}
 
 	@Override
@@ -65,31 +85,30 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 		Runner runner = new Runner();
 		runner.testFiles = testFiles;
 		runner.expectedOutputString = expectedOutput;
-		runner.vmArguments = new String[] {"--enable-preview"};
 		runner.customOptions = customOptions;
-		runner.javacTestOptions = JavacTestOptions.forReleaseWithPreview("17");
 		runner.runConformTest();
 	}
 	@Override
 	protected void runNegativeTest(String[] testFiles, String expectedCompilerLog) {
-		runNegativeTest(testFiles, expectedCompilerLog, JavacTestOptions.forReleaseWithPreview("17"));
+		runNegativeTest(testFiles, expectedCompilerLog, JavacTestOptions.DEFAULT);
 	}
 	protected void runWarningTest(String[] testFiles, String expectedCompilerLog) {
-		runWarningTest(testFiles, expectedCompilerLog, null);
+		runWarningTest(testFiles, expectedCompilerLog, (Map<String, String>) null);
 	}
 	protected void runWarningTest(String[] testFiles, String expectedCompilerLog, Map<String, String> customOptions) {
-		runWarningTest(testFiles, expectedCompilerLog, customOptions, null);
-	}
-	protected void runWarningTest(String[] testFiles, String expectedCompilerLog,
-			Map<String, String> customOptions, String javacAdditionalTestOptions) {
-
 		Runner runner = new Runner();
 		runner.testFiles = testFiles;
 		runner.expectedCompilerLog = expectedCompilerLog;
 		runner.customOptions = customOptions;
-		runner.vmArguments = new String[] {"--enable-preview"};
-		runner.javacTestOptions = javacAdditionalTestOptions == null ? JavacTestOptions.forReleaseWithPreview("16") :
-			JavacTestOptions.forReleaseWithPreview("16", javacAdditionalTestOptions);
+		runner.runWarningTest();
+	}
+
+	protected void runWarningTest(String[] testFiles, String expectedCompilerLog, String expectedOutput) {
+		Runner runner = new Runner();
+		runner.testFiles = testFiles;
+		runner.expectedCompilerLog = expectedCompilerLog;
+		runner.expectedOutputString = expectedOutput;
+		runner.customOptions = getCompilerOptions();
 		runner.runWarningTest();
 	}
 
@@ -243,7 +262,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 1)\n" +
 			"	sealed public sealed class X {\n" +
 			"	                           ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n");
 	}
 	public void testBug562715_006() {
@@ -260,7 +279,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X {\n" +
 			"	                    ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 2)\n" +
 			"	public static sealed void main(String[] args){\n" +
@@ -325,7 +344,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X permits {\n" +
 			"	                    ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X permits {\n" +
@@ -359,7 +378,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 2)\n" +
 			"	public sealed class X {\n" +
 			"	                    ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n" +
 			"3. ERROR in X.java (at line 3)\n" +
 			"	public static sealed void main(String[] args){\n" +
@@ -387,7 +406,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 2)\n" +
 			"	public sealed class X {\n" +
 			"	                    ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n" +
 			"3. ERROR in X.java (at line 3)\n" +
 			"	public static sealed void main(String[] args){\n" +
@@ -408,12 +427,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X permits Y, Z{\n" +
 			"	                              ^\n" +
-			"Permitted class Y does not declare X as direct super class\n" +
+			"Permitted type Y does not declare X as a direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X permits Y, Z{\n" +
 			"	                                 ^\n" +
-			"Permitted class Z does not declare X as direct super class\n" +
+			"Permitted type Z does not declare X as a direct supertype\n" +
 			"----------\n");
 	}
 	public void testBug563806_002() {
@@ -433,28 +452,28 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 2)\n" +
 			"	public sealed class X permits Y{\n" +
 			"	                              ^\n" +
-			"Permitted class Y does not declare p1.X as direct super class\n" +
+			"Permitted type Y does not declare p1.X as a direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in p1\\X.java (at line 5)\n" +
 			"	class Z extends X{}\n" +
 			"	      ^\n" +
-			"The class Z with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Z with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n" +
 			"3. ERROR in p1\\X.java (at line 5)\n" +
 			"	class Z extends X{}\n" +
 			"	                ^\n" +
-			"The type Z extending a sealed class X should be a permitted subtype of X\n" +
+			"The class Z cannot extend the class X as it is not a permitted subtype of X\n" +
 			"----------\n" +
 			"----------\n" +
 			"1. ERROR in p1\\A.java (at line 2)\n" +
 			"	public sealed class A extends X{}\n" +
 			"	                    ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares A as its direct superclass or superinterface\n" +
+			"Sealed type A lacks a permits clause and no type from the same compilation unit declares A as its direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in p1\\A.java (at line 2)\n" +
 			"	public sealed class A extends X{}\n" +
 			"	                              ^\n" +
-			"The type A extending a sealed class X should be a permitted subtype of X\n" +
+			"The class A cannot extend the class X as it is not a permitted subtype of X\n" +
 			"----------\n");
 	}
 	public void testBug563806_003() {
@@ -475,7 +494,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 3)\n" +
 			"	class Y implements X{}\n" +
 			"	      ^\n" +
-			"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n");
 	}
 	public void testBug563806_004() {
@@ -502,7 +521,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"3. ERROR in p1\\X.java (at line 4)\n" +
 			"	class Y implements X{}\n" +
 			"	      ^\n" +
-			"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n");
 	}
 	public void testBug563806_005() {
@@ -517,12 +536,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X permits Y, Y{\n" +
 			"	                                 ^\n" +
-			"Duplicate type Y for the type X in the permits clause\n" +
+			"Duplicate permitted type Y\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 3)\n" +
 			"	class Y extends X {}\n" +
 			"	      ^\n" +
-			"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n");
 	}
 	public void testBug563806_006() {
@@ -538,12 +557,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 2)\n" +
 			"	public sealed class X permits Y, p1.Y{\n" +
 			"	                                 ^^^^\n" +
-			"Duplicate type Y for the type X in the permits clause\n" +
+			"Duplicate permitted type Y\n" +
 			"----------\n" +
 			"2. ERROR in p1\\X.java (at line 4)\n" +
 			"	class Y extends X {}\n" +
 			"	      ^\n" +
-			"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n");
 	}
 	public void testBug563806_007() {
@@ -558,7 +577,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 3)\n" +
 			"	non-sealed class Y extends X {}\n" +
 			"	                 ^\n" +
-			"A class Y declared as non-sealed should have either a sealed direct superclass or a sealed direct superinterface\n" +
+			"The non-sealed class Y must have a sealed direct supertype\n" +
 			"----------\n");
 	}
 	public void testBug563806_008() {
@@ -577,13 +596,13 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 4)\n" +
 			"	class Y implements X{}\n" +
 			"	      ^\n" +
-			"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n" +
 			"----------\n" +
 			"1. ERROR in p2\\Y.java (at line 2)\n" +
 			"	non-sealed public interface Y {}\n" +
 			"	                            ^\n" +
-			"An interface Y declared as non-sealed should have a sealed direct superinterface\n" +
+			"The non-sealed interface Y must have a sealed direct superinterface\n" +
 			"----------\n");
 	}
 	public void testBug563806_009() {
@@ -615,7 +634,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p2\\Y.java (at line 2)\n" +
 			"	public final class Y extends p1.X{}\n" +
 			"	                             ^^^^\n" +
-			"Sealed type X and sub type Y in an unnamed module should be declared in the same package p1\n" +
+			"The class Y cannot extend the class X as it is not a permitted subtype of X\n" +
 			"----------\n");
 	}
 	public void testBug563806_011() {
@@ -649,7 +668,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p2\\Y.java (at line 2)\n" +
 			"	public final class Y implements p1.X{}\n" +
 			"	                                ^^^^\n" +
-			"Sealed type X and sub type Y in an unnamed module should be declared in the same package p1\n" +
+			"The type Y that implements the sealed interface X should be a permitted subtype of X\n" +
 			"----------\n");
 	}
 	public void testBug563806_013() {
@@ -694,7 +713,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in p2\\Y.java (at line 2)\n" +
 			"	public interface Y extends p1.X{}\n" +
 			"	                           ^^^^\n" +
-			"Sealed type X and sub type Y in an unnamed module should be declared in the same package p1\n" +
+			"The type Y that extends the sealed interface X should be a permitted subtype of X\n" +
 			"----------\n");
 	}
 	public void testBug563806_015() {
@@ -848,7 +867,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in p1\\X.java (at line 2)\n" +
 			"	public sealed class X permits Y, p2.Y {\n" +
 			"	                                 ^^^^\n" +
-			"Permitted class Y does not declare p1.X as direct super class\n" +
+			"Permitted type Y does not declare p1.X as a direct supertype\n" +
 			"----------\n";
 		runner.runNegativeTest();
 	}
@@ -1054,12 +1073,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 2)\n" +
 			"	public sealed non-sealed interface X {\n" +
 			"	                                   ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"The type X may have only one modifier out of sealed, non-sealed, and final\n" +
 			"----------\n" +
 			"2. ERROR in p1\\X.java (at line 2)\n" +
 			"	public sealed non-sealed interface X {\n" +
 			"	                                   ^\n" +
-			"An interface X is declared both sealed and non-sealed\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n");
 	}
 	public void testBug563806_033() {
@@ -1086,10 +1105,31 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"}\n",
 			},
 			"----------\n" +
-			"1. ERROR in p1\\X.java (at line 2)\n" +
+			"1. ERROR in p1\\X.java (at line 1)\n" +
+			"	package p1;\n" +
+			"	^^^^^^^^^^^\n" +
+			"Syntax error on token(s), misplaced construct(s)\n" +
+			"----------\n" +
+			"2. ERROR in p1\\X.java (at line 1)\n" +
+			"	package p1;\n" +
+			"public  non-sealed @interface X {\n" +
+			"	^^^^^^^^^^^^^^^^^^^^^^^\n" +
+			"Syntax error on token(s), misplaced construct(s)\n" +
+			"----------\n" +
+			"3. ERROR in p1\\X.java (at line 2)\n" +
 			"	public  non-sealed @interface X {\n" +
-			"	                              ^\n" +
-			"An interface X declared as non-sealed should have a sealed direct superinterface\n" +
+			"	            ^^^^^^\n" +
+			"Syntax error, insert \"Identifier (\" to complete MethodHeaderName\n" +
+			"----------\n" +
+			"4. ERROR in p1\\X.java (at line 2)\n" +
+			"	public  non-sealed @interface X {\n" +
+			"	            ^^^^^^\n" +
+			"Syntax error, insert \")\" to complete MethodDeclaration\n" +
+			"----------\n" +
+			"5. ERROR in p1\\X.java (at line 2)\n" +
+			"	public  non-sealed @interface X {\n" +
+			"	            ^^^^^^\n" +
+			"Syntax error, insert \";\" to complete RecordBodyDeclarations\n" +
 			"----------\n");
 	}
 	public void testBug563806_035() {
@@ -1104,7 +1144,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 2)\n" +
 			"	public  non-sealed interface X {\n" +
 			"	                             ^\n" +
-			"An interface X declared as non-sealed should have a sealed direct superinterface\n" +
+			"The non-sealed interface X must have a sealed direct superinterface\n" +
 			"----------\n");
 	}
 	public void testBug563806_036() {
@@ -1158,6 +1198,11 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 4)\n" +
 			"	non-sealed sealed class Y{}\n" +
 			"	                        ^\n" +
+			"The type Y may have only one modifier out of sealed, non-sealed, and final\n" +
+			"----------\n" +
+			"2. ERROR in p1\\X.java (at line 4)\n" +
+			"	non-sealed sealed class Y{}\n" +
+			"	                        ^\n" +
 			"Illegal modifier for the local class Y; only abstract or final is permitted\n" +
 			"----------\n");
 	}
@@ -1177,12 +1222,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 2)\n" +
 			"	sealed class A{}\n" +
 			"	             ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares A as its direct superclass or superinterface\n" +
+			"Sealed type A lacks a permits clause and no type from the same compilation unit declares A as its direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in p1\\X.java (at line 5)\n" +
 			"	class Y extends A{}\n" +
 			"	                ^\n" +
-			"A local class Y cannot have a sealed direct superclass or a sealed direct superinterface A\n" +
+			"The local type Y may not have a sealed supertype A\n" +
 			"----------\n");
 	}
 	public void testBug564191_001() throws IOException, ClassFormatException {
@@ -1287,7 +1332,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in p1\\X.java (at line 3)\n" +
 				"	class Y extends X {}\n" +
 				"	      ^\n" +
-				"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+				"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 				"----------\n");
 	}
 	// Test that implicit permitted member type with implicit permitted types
@@ -1306,7 +1351,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in p1\\X.java (at line 3)\n" +
 				"	sealed class Y extends X {}\n" +
 				"	             ^\n" +
-				"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares Y as its direct superclass or superinterface\n" +
+				"Sealed type Y lacks a permits clause and no type from the same compilation unit declares Y as its direct supertype\n" +
 				"----------\n");
 	}
 	// Test that implicit permitted member type with explicit permits clause
@@ -1325,7 +1370,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in p1\\X.java (at line 3)\n" +
 				"	sealed class Y extends X permits Z {}\n" +
 				"	                                 ^\n" +
-				"Permitted class Z does not declare p1.X.Y as direct super class\n" +
+				"Permitted type Z does not declare p1.X.Y as a direct supertype\n" +
 				"----------\n");
 	}
 	// Test that implicit permitted member type with explicit permits clause
@@ -1341,7 +1386,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in p1\\X.java (at line 2)\n" +
 				"	sealed interface SI {}\n" +
 				"	                 ^^\n" +
-				"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares SI as its direct superclass or superinterface\n" +
+				"Sealed type SI lacks a permits clause and no type from the same compilation unit declares SI as its direct supertype\n" +
 				"----------\n");
 	}
 	public void testBug564450_001() throws IOException, ClassFormatException {
@@ -1360,7 +1405,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in p1\\Y.java (at line 2)\n" +
 				"	class Y extends X {\n" +
 				"	      ^\n" +
-				"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+				"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 				"----------\n");
 	}
 	public void testBug564047_001() throws CoreException, IOException {
@@ -1397,12 +1442,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in src\\p\\X.java (at line 2)\n" +
 				"	public class X extends Y {\n" +
 				"	             ^\n" +
-				"The class X with a sealed direct superclass or a sealed direct superinterface Y should be declared either final, sealed, or non-sealed\n" +
+				"The class X with a sealed direct supertype Y should be declared either final, sealed, or non-sealed\n" +
 				"----------\n" +
 				"2. ERROR in src\\p\\X.java (at line 2)\n" +
 				"	public class X extends Y {\n" +
 				"	                       ^\n" +
-				"The type X extending a sealed class Y should be a permitted subtype of Y\n" +
+				"The class X cannot extend the class Y as it is not a permitted subtype of Y\n" +
 				"----------\n",
 				libs,
 		        true);
@@ -1542,8 +1587,8 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"");
 			String expectedOutput =
 					"PermittedSubclasses:\n" +
-					"   #22 p1/A$Z,\n" +
-					"   #24 p1/A$SubY\n" +
+					"   #22 p1/A$SubY,\n" +
+					"   #24 p1/A$Z\n" +
 					"}";
 			verifyClassFile(expectedOutput, "p1/A$Y.class", ClassFileBytesDisassembler.SYSTEM);
 			expectedOutput =
@@ -1570,9 +1615,9 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"");
 			String expectedOutput =
 					"PermittedSubclasses:\n" +
-					"   #24 p1/A$Y$SubInnerY,\n" +
-					"   #26 p1/A$Z,\n" +
-					"   #28 p1/A$SubY\n";
+					"   #24 p1/A$SubY,\n" +
+					"   #26 p1/A$Y$SubInnerY,\n" +
+					"   #28 p1/A$Z\n";
 			verifyClassFile(expectedOutput, "p1/A$Y.class", ClassFileBytesDisassembler.SYSTEM);
 	}
 	public void testBug564498_4() throws IOException, ClassFormatException {
@@ -1611,10 +1656,15 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 					"}",
 				},
 				"----------\n" +
-				"1. ERROR in p1\\X.java (at line 7)\n" +
+				"1. ERROR in p1\\X.java (at line 6)\n" +
+				"	sealed class Y extends X permits SubInnerY {\n" +
+				"	                                 ^^^^^^^^^\n" +
+				"SubInnerY cannot be resolved to a type\n" +
+				"----------\n" +
+				"2. ERROR in p1\\X.java (at line 7)\n" +
 				"	final class SubInnerY extends Y {}\n" +
 				"	                              ^\n" +
-				"The type SubInnerY extending a sealed class A.Y should be a permitted subtype of A.Y\n" +
+				"The class SubInnerY cannot extend the class A.Y as it is not a permitted subtype of A.Y\n" +
 				"----------\n");
 	}
 	// accept references of membertype without qualifier of enclosing type in permits clause
@@ -2818,7 +2868,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 5)\n" +
 			"	<permits>this(t);\n" +
 			"	         ^^^^^^^^\n" +
-			"The parameterized constructor <permits>X(permits) of type X is not applicable for the arguments (Integer)\n" +
+			"The constructor X(permits) refers to the missing type permits\n" +
 			"----------\n");
 	}
 	@SuppressWarnings({ "unchecked", "rawtypes" })
@@ -2845,7 +2895,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"3. ERROR in X.java (at line 5)\n" +
 			"	<permits>this(t);\n" +
 			"	         ^^^^^^^^\n" +
-			"The parameterized constructor <permits>X(permits) of type X is not applicable for the arguments (Integer)\n" +
+			"The constructor X(permits) refers to the missing type permits\n" +
 			"----------\n",
 			null,
 			true,
@@ -2869,7 +2919,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 5)\n" +
 			"	new <permits>X(t).foo();\n" +
 			"	^^^^^^^^^^^^^^^^^\n" +
-			"The parameterized constructor <permits>X(permits) of type X is not applicable for the arguments (Integer)\n" +
+			"The constructor X(permits) refers to the missing type permits\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 5)\n" +
 			"	new <permits>X(t).foo();\n" +
@@ -2897,7 +2947,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 5)\n" +
 			"	new <permits>X(t).foo();\n" +
 			"	^^^^^^^^^^^^^^^^^\n" +
-			"The parameterized constructor <permits>X(permits) of type X is not applicable for the arguments (Integer)\n" +
+			"The constructor X(permits) refers to the missing type permits\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 5)\n" +
 			"	new <permits>X(t).foo();\n" +
@@ -2931,7 +2981,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 6)\n" +
 			"	x.<permits>foo(0);\n" +
 			"	           ^^^\n" +
-			"The parameterized method <permits>foo(permits) of type X is not applicable for the arguments (Integer)\n" +
+			"The method foo(permits) from the type X refers to the missing type permits\n" +
 			"----------\n");
 	}
 	@SuppressWarnings({ "unchecked", "rawtypes" })
@@ -2959,7 +3009,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"3. ERROR in X.java (at line 6)\n" +
 			"	x.<permits>foo(0);\n" +
 			"	           ^^^\n" +
-			"The parameterized method <permits>foo(permits) of type X is not applicable for the arguments (Integer)\n" +
+			"The method foo(permits) from the type X refers to the missing type permits\n" +
 			"----------\n",
 			null,
 			true,
@@ -4441,7 +4491,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 5)\n" +
 			"	<sealed>this(t);\n" +
 			"	        ^^^^^^^^\n" +
-			"The parameterized constructor <sealed>X(sealed) of type X is not applicable for the arguments (Integer)\n" +
+			"The constructor X(sealed) refers to the missing type sealed\n" +
 			"----------\n");
 	}
 	@SuppressWarnings({ "unchecked", "rawtypes" })
@@ -4468,7 +4518,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"3. ERROR in X.java (at line 5)\n" +
 			"	<sealed>this(t);\n" +
 			"	        ^^^^^^^^\n" +
-			"The parameterized constructor <sealed>X(sealed) of type X is not applicable for the arguments (Integer)\n" +
+			"The constructor X(sealed) refers to the missing type sealed\n" +
 			"----------\n",
 			null,
 			true,
@@ -4492,7 +4542,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 5)\n" +
 			"	new <sealed>X(t).foo();\n" +
 			"	^^^^^^^^^^^^^^^^\n" +
-			"The parameterized constructor <sealed>X(sealed) of type X is not applicable for the arguments (Integer)\n" +
+			"The constructor X(sealed) refers to the missing type sealed\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 5)\n" +
 			"	new <sealed>X(t).foo();\n" +
@@ -4520,7 +4570,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 5)\n" +
 			"	new <sealed>X(t).foo();\n" +
 			"	^^^^^^^^^^^^^^^^\n" +
-			"The parameterized constructor <sealed>X(sealed) of type X is not applicable for the arguments (Integer)\n" +
+			"The constructor X(sealed) refers to the missing type sealed\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 5)\n" +
 			"	new <sealed>X(t).foo();\n" +
@@ -4554,7 +4604,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 6)\n" +
 			"	x.<sealed>foo(0);\n" +
 			"	          ^^^\n" +
-			"The parameterized method <sealed>foo(sealed) of type X is not applicable for the arguments (Integer)\n" +
+			"The method foo(sealed) from the type X refers to the missing type sealed\n" +
 			"----------\n");
 	}
 	@SuppressWarnings({ "unchecked", "rawtypes" })
@@ -4582,7 +4632,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"3. ERROR in X.java (at line 6)\n" +
 			"	x.<sealed>foo(0);\n" +
 			"	          ^^^\n" +
-			"The parameterized method <sealed>foo(sealed) of type X is not applicable for the arguments (Integer)\n" +
+			"The method foo(sealed) from the type X refers to the missing type sealed\n" +
 			"----------\n",
 			null,
 			true,
@@ -5190,8 +5240,18 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"----------\n" +
 			"1. ERROR in X.java (at line 1)\n" +
 			"	record X;\n" +
+			"	^\n" +
+			"The preview feature Implicitly Declared Classes and Instance Main Methods is only available with source level 23 and above\n" +
+			"----------\n" +
+			"2. ERROR in X.java (at line 1)\n" +
+			"	record X;\n" +
 			"	^^^^^^\n" +
-			"Syntax error on token \"record\", package expected\n" +
+			"\'record\' is not a valid type name; it is a restricted identifier and not allowed as a type identifier in Java 16\n" +
+			"----------\n" +
+			"3. ERROR in X.java (at line 1)\n" +
+			"	record X;\n" +
+			"	^\n" +
+			"Implicitly declared class must have a candidate main method\n" +
 			"----------\n",
 			null,
 			true,
@@ -5282,13 +5342,13 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 1)\n" +
 			"	public sealed interface X{}\n" +
 			"	                        ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n" +
 			"----------\n" +
 			"1. ERROR in Y.java (at line 1)\n" +
 			"	public final class Y implements X{}\n" +
 			"	                                ^\n" +
-			"The type Y that implements a sealed interface X should be a permitted subtype of X\n" +
+			"The type Y that implements the sealed interface X should be a permitted subtype of X\n" +
 			"----------\n");
 	}
 	public void testBug569522_001() throws IOException, ClassFormatException {
@@ -5371,7 +5431,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 4)\n" +
 			"	record B() implements Foo {}\n" +
 			"	                      ^^^\n" +
-			"The type B that implements a sealed interface X.Foo should be a permitted subtype of X.Foo\n" +
+			"The type B that implements the sealed interface X.Foo should be a permitted subtype of X.Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_002() {
@@ -5388,7 +5448,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 4)\n" +
 			"	record B() implements Foo {}\n" +
 			"	                      ^^^\n" +
-			"The type B that implements a sealed interface Foo should be a permitted subtype of Foo\n" +
+			"The type B that implements the sealed interface Foo should be a permitted subtype of Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_003() {
@@ -5405,7 +5465,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 3)\n" +
 			"	record B() implements Foo {}\n" +
 			"	                      ^^^\n" +
-			"The type B that implements a sealed interface Foo should be a permitted subtype of Foo\n" +
+			"The type B that implements the sealed interface Foo should be a permitted subtype of Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_004() {
@@ -5422,12 +5482,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 3)\n" +
 			"	class A implements Foo {}\n" +
 			"	      ^\n" +
-			"The class A with a sealed direct superclass or a sealed direct superinterface X.Foo should be declared either final, sealed, or non-sealed\n" +
+			"The class A with a sealed direct supertype X.Foo should be declared either final, sealed, or non-sealed\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 4)\n" +
 			"	final class B implements Foo {}\n" +
 			"	                         ^^^\n" +
-			"The type B that implements a sealed interface X.Foo should be a permitted subtype of X.Foo\n" +
+			"The type B that implements the sealed interface X.Foo should be a permitted subtype of X.Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_005() {
@@ -5444,12 +5504,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 3)\n" +
 			"	class A implements Foo {}\n" +
 			"	      ^\n" +
-			"The class A with a sealed direct superclass or a sealed direct superinterface Foo should be declared either final, sealed, or non-sealed\n" +
+			"The class A with a sealed direct supertype Foo should be declared either final, sealed, or non-sealed\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 4)\n" +
 			"	final class B implements Foo {}\n" +
 			"	                         ^^^\n" +
-			"The type B that implements a sealed interface Foo should be a permitted subtype of Foo\n" +
+			"The type B that implements the sealed interface Foo should be a permitted subtype of Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_006() {
@@ -5466,12 +5526,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 2)\n" +
 			"	class A implements Foo {}\n" +
 			"	      ^\n" +
-			"The class A with a sealed direct superclass or a sealed direct superinterface Foo should be declared either final, sealed, or non-sealed\n" +
+			"The class A with a sealed direct supertype Foo should be declared either final, sealed, or non-sealed\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 3)\n" +
 			"	final class B implements Foo {}\n" +
 			"	                         ^^^\n" +
-			"The type B that implements a sealed interface Foo should be a permitted subtype of Foo\n" +
+			"The type B that implements the sealed interface Foo should be a permitted subtype of Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_007() {
@@ -5495,12 +5555,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 5)\n" +
 			"	class Y implements I {}\n" +
 			"	                   ^\n" +
-			"A local class Y cannot have a sealed direct superclass or a sealed direct superinterface I\n" +
+			"The local type Y may not have a sealed supertype I\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 10)\n" +
 			"	class Z implements I{}\n" +
 			"	                   ^\n" +
-			"A local class Z cannot have a sealed direct superclass or a sealed direct superinterface I\n" +
+			"The local type Z may not have a sealed supertype I\n" +
 			"----------\n");
 	}
 	public void testBug568854_008() {
@@ -5524,12 +5584,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 6)\n" +
 			"	class Y implements I {}\n" +
 			"	                   ^\n" +
-			"A local class Y cannot have a sealed direct superclass or a sealed direct superinterface I\n" +
+			"The local type Y may not have a sealed supertype I\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 10)\n" +
 			"	class Z implements I{}\n" +
 			"	                   ^\n" +
-			"A local class Z cannot have a sealed direct superclass or a sealed direct superinterface I\n" +
+			"The local type Z may not have a sealed supertype I\n" +
 			"----------\n");
 	}
 	public void testBug571332_001() {
@@ -5571,7 +5631,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in X.java (at line 6)\n" +
 				"	class L extends Y {}\n" +
 				"	                ^\n" +
-				"A local class L cannot have a sealed direct superclass or a sealed direct superinterface Y\n" +
+				"The local type L may not have a sealed supertype Y\n" +
 				"----------\n");
 	}
 	public void testBug570218_001() {
@@ -5617,12 +5677,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 3)\n" +
 			"	class Circle implements Shape{}\n" +
 			"	                        ^^^^^\n" +
-			"A local class Circle cannot have a sealed direct superclass or a sealed direct superinterface X.Shape\n" +
+			"The local type Circle may not have a sealed supertype X.Shape\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 5)\n" +
 			"	sealed interface Shape {}\n" +
 			"	                 ^^^^^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares Shape as its direct superclass or superinterface\n" +
+			"Sealed type Shape lacks a permits clause and no type from the same compilation unit declares Shape as its direct supertype\n" +
 			"----------\n");
 	}
 	public void testBug573450_001() {
@@ -5705,12 +5765,17 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 					"	final class Y extends X {}\n" +
 					"}"
 				},
-				"----------\n"
-				+ "1. ERROR in X.java (at line 2)\n"
-				+ "	final class Y extends X {}\n"
-				+ "	                      ^\n"
-				+ "The type Y extending a sealed class X should be a permitted subtype of X\n"
-				+ "----------\n");
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public sealed class X permits Y {\n" +
+				"	                              ^\n" +
+				"Y cannot be resolved to a type\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 2)\n" +
+				"	final class Y extends X {}\n" +
+				"	                      ^\n" +
+				"The class Y cannot extend the class X as it is not a permitted subtype of X\n" +
+				"----------\n");
 	}
 	public void testBug578619_1() {
 		runConformTest(
@@ -5749,7 +5814,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"2. ERROR in Bug578619.java (at line 8)\n" +
 				"	non-sealed interface I3 extends I2 {}\n" +
 				"	                     ^^\n" +
-				"An interface I3 declared as non-sealed should have a sealed direct superinterface\n" +
+				"The non-sealed interface I3 must have a sealed direct superinterface\n" +
 				"----------\n");
 	}
 	// https://bugs.eclipse.org/bugs/show_bug.cgi?id=576378
@@ -5834,5 +5899,948 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				+ "	                               ^^^^^^\n"
 				+ "Type arguments are not allowed here\n"
 				+ "----------\n");
+	}
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2093
+	// [sealed types] ECJ complains of cycles in hierarchy where none exists
+	public void testIssue2093() {
+		runConformTest(
+				new String[] {
+						"X.java",
+						"""
+						record Bar() implements TheA.FooOrBar {
+						}
+
+						record Foo() implements TheA.FooOrBar {
+						}
+
+						sealed interface Base permits TheA, TheB {
+						}
+
+						record TheA() implements Base {
+							public sealed interface FooOrBar permits Foo, Bar {
+							}
+						}
+
+						record TheB<T extends TheA.FooOrBar>() implements Base {
+						}
+						public class X {
+						    public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+				        }
+						"""
+				},
+				"Compiled and ran fine!");
+	}
+
+	// https://bugs.eclipse.org/bugs/show_bug.cgi?id=576471
+	// Sealed type hierarchy doesn't compile if there are redundant type references
+	public void testBug576471() {
+		runConformTest(
+				new String[] {
+						"X.java",
+						"""
+						public class X {
+							public sealed interface I permits IA, C1, C2 {}
+							public sealed interface IA extends I permits A {}
+							public abstract sealed class A implements IA permits C1, C2 {}
+							public final class C1 extends A implements I {}
+							public final class C2 extends A implements I {}
+							public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+						}
+						"""
+				},
+				"Compiled and ran fine!");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1808
+	// [sealed-classes] Incorrect unused import warning
+	public void testIssue1808() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed interface X permits B {
+						    record B(int data) {}
+						    public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public sealed interface X permits B {\n" +
+				"	                                  ^\n" +
+				"B cannot be resolved to a type\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1808
+	// [sealed-classes] Incorrect unused import warning
+	public void testIssue1808_1() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed interface X permits B {
+						    record B(int data) implements X {}
+						    public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public sealed interface X permits B {\n" +
+				"	                                  ^\n" +
+				"B cannot be resolved to a type\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 2)\n" +
+				"	record B(int data) implements X {}\n" +
+				"	                              ^\n" +
+				"The type B that implements the sealed interface X should be a permitted subtype of X\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1808
+	// [sealed-classes] Incorrect unused import warning
+	public void testIssue1808_2() {
+		runConformTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed interface X permits X.B {
+						    record B(int data)  implements X {}
+						    public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+						}
+						"""
+				},
+				"Compiled and ran fine!");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1808
+	// [sealed-classes] Incorrect unused import warning
+	public void testIssue1808_3() {
+		runWarningTest(
+				new String[] {
+						"foo/X.java",
+						"""
+						package foo;
+						import foo.X.B;
+						public sealed interface X permits B {
+						    record B(int data) implements X {}
+						    public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+						}
+						"""
+				},
+				"",
+				"Compiled and ran fine!");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1808
+	// [sealed-classes] Incorrect unused import warning
+	public void testIssue1808_4() {
+		Runner runner = new Runner();
+		runner.testFiles =
+				new String[] {
+						"foo/X.java",
+						"""
+						package foo;
+						import foo.X.B;
+						public sealed interface X permits X.B {
+						    record B(int data) implements X {}
+						    public static void main(String [] args) {
+						        System.out.println("Compiled and ran fine!");
+					        }
+						}
+						"""
+				};
+		runner.expectedCompilerLog =
+				"----------\n"
+				+ "1. WARNING in foo\\X.java (at line 2)\n"
+				+ "	import foo.X.B;\n"
+				+ "	       ^^^^^^^\n"
+				+ "The import foo.X.B is never used\n"
+				+ "----------\n";
+		runner.expectedOutputString =
+				"Compiled and ran fine!";
+		runner.javacTestOptions = Excuse.EclipseHasSomeMoreWarnings;
+		runner.runWarningTest();
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2595
+	// [sealed types] ECJ accepts a cast from a disjoint interface to a sealed interface
+	public void testIssue2595_0() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface I {
+						}
+
+						final class C {
+						}
+
+						public class X {
+							void test(C c) {
+								if (c instanceof I) // Compile-time error!
+									System.out.println("It's an I");
+							}
+							void test(I i) {
+								if (i instanceof C) // Compile-time error!
+									System.out.println("It's a C");
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 9)\n" +
+				"	if (c instanceof I) // Compile-time error!\n" +
+				"	    ^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types C and I\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 13)\n" +
+				"	if (i instanceof C) // Compile-time error!\n" +
+				"	    ^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types I and C\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2595
+	// [sealed types] ECJ accepts a cast from a disjoint interface to a sealed interface
+	public void testIssue2595_1() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public class X {
+							interface I {
+							}
+
+							sealed class C permits D {
+							}
+
+							final class D extends C {
+							}
+
+							void test(C c) {
+								if (c instanceof I) // Compile-time error!
+									System.out.println("It's an I");
+							}
+
+							void test(I i) {
+								if (i instanceof C) // Compile-time error!
+									System.out.println("It's a C");
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 12)\n" +
+				"	if (c instanceof I) // Compile-time error!\n" +
+				"	    ^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types X.C and X.I\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 17)\n" +
+				"	if (i instanceof C) // Compile-time error!\n" +
+				"	    ^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types X.I and X.C\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2595
+	// [sealed types] ECJ accepts a cast from a disjoint interface to a sealed interface
+	public void testIssue2595_2() {
+		runConformTest(
+				new String[] {
+						"X.java",
+						"""
+						public class X {
+							interface I {}
+							sealed class C permits D, E {}
+							non-sealed class D extends C {}
+							final class E extends C {}
+						    class F extends D implements I {}
+
+							void test (C c) {
+							    if (c instanceof I)
+							        System.out.println("It's an I");
+							}
+
+							void test (I i) {
+							    if (i instanceof C)
+							        System.out.println("It's a C");
+							}
+
+						    public static void main(String [] args) {
+						        new X().test(((C) new X().new F()));
+						        new X().test(((I) new X().new F()));
+						    }
+						}
+						"""
+				},
+				"It's an I\nIt's a C");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2595
+	// [sealed types] ECJ accepts a cast from a disjoint interface to a sealed interface
+	public void testIssue2595_3() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						sealed interface Intf permits PermittedA {}
+						final class PermittedA implements Intf {}
+						interface Standalone {}
+						public class X {
+						    public Intf foo(Standalone st) {
+						    	return (Intf) st;
+						    }
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 6)\r\n" +
+				"	return (Intf) st;\r\n" +
+				"	       ^^^^^^^^^\n" +
+				"Cannot cast from Standalone to Intf\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2667
+	// [Sealed Types] Failure to cast an Object to a generic sealed interface type
+	public void testIssue2667() {
+		runWarningTest(
+				new String[] {
+						"Either.java",
+						"""
+						import java.util.NoSuchElementException;
+
+						public sealed interface Either<L,R> {
+
+						    L getLeft();
+						    R getRight();
+
+						    record Left<L, R>(L error) implements Either<L, R> {
+						        @Override
+						        public L getLeft() {
+						            return error;
+						        }
+						        @Override
+						        public R getRight() {
+						            throw new NoSuchElementException();
+						        }
+						    }
+
+						    record Right<L, R>(R value) implements Either<L, R> {
+						        @Override
+						        public L getLeft() {
+						            throw new NoSuchElementException();
+						        }
+						        @Override
+						        public R getRight() {
+						            return value;
+						        }
+						    }
+
+						    public static void main(String[] args) {
+						        Object o = new Left<String, Integer>("boo");
+						        var either = (Either<String, Integer>) o;
+						        System.out.println(either.getLeft());
+						    }
+						}
+						"""
+				},
+				"----------\n" +
+				"1. WARNING in Either.java (at line 32)\n" +
+				"	var either = (Either<String, Integer>) o;\n" +
+				"	             ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+				"Type safety: Unchecked cast from Object to Either<String,Integer>\n" +
+				"----------\n",
+				"boo");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2672
+	// [Sealed Types] Strange error from ECJ: Syntax error on token "permits", permits expected
+	public void testIssue2672() {
+		runNegativeTest(
+				new String[] {
+						"test/IShape.java",
+						"""
+						package test;
+
+						public sealed interface IShape permits Circle {\\n\
+						}
+						class Circle {
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in test\\IShape.java (at line 3)\n" +
+				"	public sealed interface IShape permits Circle {\\n}\n" +
+				"	                                       ^^^^^^\n" +
+				"Permitted type Circle does not declare test.IShape as direct super interface \n" +
+				"----------\n" +
+				"2. ERROR in test\\IShape.java (at line 3)\n" +
+				"	public sealed interface IShape permits Circle {\\n}\n" +
+				"	                                               ^^\n" +
+				"Syntax error on tokens, delete these tokens\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2654
+	// [Sealed Types] Compiler does not handle non-sealed contextual keyword correctly
+	public void testIssue2654() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						non-sealed public class X {
+							int foo(int non, int sealed) {
+								return non-sealed;
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	non-sealed public class X {\n" +
+				"	                        ^\n" +
+				"The non-sealed class X must have a sealed direct supertype\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2654
+	// [Sealed Types] Compiler does not handle non-sealed contextual keyword correctly
+	public void testIssue2654_2() {
+		runConformTest(
+				new String[] {
+						"X.java",
+						"""
+						public class X {
+							static int foo(int non, int sealed) {
+								return non-sealed;
+							}
+						    public static void main(String [] args) {
+						        System.out.println(foo(142, 100));
+						    }
+						}
+						"""
+				},
+				"42");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2707
+	// [Sealed types] ECJ allows a class to be declared as both sealed and non-sealed
+	public void testIssue2707() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed class X permits Y {
+						}
+
+						sealed non-sealed class Y extends X permits K {}
+
+						final class K extends Y {}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 4)\n" +
+				"	sealed non-sealed class Y extends X permits K {}\n" +
+				"	                        ^\n" +
+				"The type Y may have only one modifier out of sealed, non-sealed, and final\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2707
+	// [Sealed types] ECJ allows a class to be declared as both sealed and non-sealed
+	public void testIssue2707_2() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed class X permits Y {
+						}
+
+						final non-sealed class Y extends X  {}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 4)\n" +
+				"	final non-sealed class Y extends X  {}\n" +
+				"	                       ^\n" +
+				"The type Y may have only one modifier out of sealed, non-sealed, and final\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2707
+	// [Sealed types] ECJ allows a class to be declared as both sealed and non-sealed
+	public void testIssue2707_3() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public final sealed class X permits Y {
+						}
+
+						final non-sealed class Y extends X  {}
+						"""
+				},
+				"----------\n" +
+			    "1. ERROR in X.java (at line 1)\n" +
+			    "	public final sealed class X permits Y {\n" +
+			    "	                          ^\n" +
+			    "The type X may have only one modifier out of sealed, non-sealed, and final\n" +
+			    "----------\n" +
+			    "2. ERROR in X.java (at line 4)\n" +
+			    "	final non-sealed class Y extends X  {}\n" +
+			    "	                       ^\n" +
+			    "The type Y may have only one modifier out of sealed, non-sealed, and final\n" +
+			    "----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3100
+	// [Sealed types] Duplicate diagnostics for illegal modifier combination
+	public void testIssue3100() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed non-sealed interface X {}
+						final class Y implements X  {}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public sealed non-sealed interface X {}\n" +
+				"	                                   ^\n" +
+				"The type X may have only one modifier out of sealed, non-sealed, and final\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3144
+	// [Sealed types] Diagnostic can be more direct when a @FunctionalInterface is declared sealed
+	public void testIssue3144() {
+		runNegativeTest(
+				new String[] {
+						"I.java",
+						"""
+						@FunctionalInterface
+						public sealed interface I { void doit(); }
+						final class Y implements I  { public void doit() {} }
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in I.java (at line 2)\n" +
+				"	public sealed interface I { void doit(); }\n" +
+				"	                        ^\n" +
+				"A functional interface may not be declared sealed\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3039
+	// [Sealed types] Broken program crashes the compiler
+	public void testIssue3039() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed class X permits X.C {
+						    private final static class C extends X implements I {}
+						}
+
+						sealed interface I permits X.C {}
+						record R(X.C xc, R.C rc) {
+						    private class C {}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 5)\n" +
+				"	sealed interface I permits X.C {}\n" +
+				"	                           ^^^\n" +
+				"The type X.C is not visible\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 6)\n" +
+				"	record R(X.C xc, R.C rc) {\n" +
+				"	         ^^^\n" +
+				"The type X.C is not visible\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	public void testIssue3121() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						abstract sealed class Maybe<N extends Number> {
+							final class Maybe1 extends Maybe<Long> {}
+							final class Maybe2 extends Maybe<Long> implements SuperInt {}
+						}
+
+
+						abstract sealed class SurelyNot<N extends Number> {
+							final class SurelyNot1 extends SurelyNot<Long> {}
+							final class SurelyNot2 extends SurelyNot<Long> {}
+						}
+
+						abstract sealed class SurelyYes<N extends Number> {
+							final class SurelyYes1 extends SurelyYes<Long> implements SuperInt {}
+							final class SurelyYes2 extends SurelyYes<Long> implements SuperInt {}
+						}
+
+						class Test {
+
+							void testMaybe(Maybe<?> maybe, SurelyNot<?> surelyNot, SurelyYes<?> surelyYes) {
+								if (maybe == null || surelyNot == null || surelyYes == null) return;
+								if (maybe instanceof SuperInt sup) {}
+								if (surelyNot instanceof SuperInt sup) {}
+								if (surelyYes instanceof SuperInt sup) {}
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 24)\n" +
+				"	if (surelyNot instanceof SuperInt sup) {}\n" +
+				"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types SurelyNot<capture#5-of ?> and SuperInt\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	public void testIssue3121_2() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						class Outer<T> {
+							abstract sealed class Maybe<N extends Number> {
+								final class Maybe1 extends Maybe<Long> {}
+							}
+						}
+
+						class Test {
+
+							void testMaybe(Outer<String>.Maybe<?> maybe) {
+								if (maybe instanceof SuperInt sup) {}
+								return null;
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 12)\n" +
+				"	if (maybe instanceof SuperInt sup) {}\n" +
+				"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types Outer<String>.Maybe<capture#1-of ?> and SuperInt\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 13)\n" +
+				"	return null;\n" +
+				"	^^^^^^^^^^^^\n" +
+				"Void methods cannot return a value\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	public void testIssue3121_2_1() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						class Outer<T> {
+							abstract sealed class Maybe<N extends Number> {
+								final class Maybe1 extends Maybe<Long> implements SuperInt {}
+							}
+						}
+
+						class Test {
+
+							void testMaybe(Outer<String>.Maybe<?> maybe) {
+								if (maybe instanceof SuperInt sup) {}
+								return null;
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 13)\n" +
+				"	return null;\n" +
+				"	^^^^^^^^^^^^\n" +
+				"Void methods cannot return a value\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	public void testIssue3121_3() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						class Outer<T> {
+							abstract sealed class Maybe<N extends Number> {
+								final class Maybe1 extends Outer<Test>.Maybe<Long> {}
+							}
+						}
+
+						class Test {
+
+							void testMaybe(Outer<Test>.Maybe<?> maybe) {
+								if (maybe == null) return;
+								if (maybe instanceof SuperInt sup) {}
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 13)\n" +
+				"	if (maybe instanceof SuperInt sup) {}\n" +
+				"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types Outer<Test>.Maybe<capture#2-of ?> and SuperInt\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	public void testIssue3121_4() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						class Outer<T> {
+							abstract sealed class Maybe<N extends Number> {
+								final class Maybe1 extends Outer<Test>.Maybe<Long> implements SuperInt {}
+							}
+						}
+
+						class Test {
+
+							void testMaybe(Outer<Test>.Maybe<?> maybe) {
+								if (maybe == null) return;
+								if (maybe instanceof SuperInt sup) {}
+								return null;
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 14)\n" +
+				"	return null;\n" +
+				"	^^^^^^^^^^^^\n" +
+				"Void methods cannot return a value\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	// NOTE: javac does not report error#1 but that looks like a defect
+	public void testIssue3121_5() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						class Outer<T> {
+							abstract sealed class Maybe<N extends Number> {
+								final class Maybe1 extends Outer<Test>.Maybe<Long> implements SuperInt {}
+							}
+						}
+
+						class Test {
+
+							void testMaybe(Outer<String>.Maybe<?> maybe) {
+								if (maybe == null) return;
+								if (maybe instanceof SuperInt sup) {}
+								return null;
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 13)\n" +
+				"	if (maybe instanceof SuperInt sup) {}\n" +
+				"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types Outer<String>.Maybe<capture#2-of ?> and SuperInt\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 14)\n" +
+				"	return null;\n" +
+				"	^^^^^^^^^^^^\n" +
+				"Void methods cannot return a value\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3007
+	// [Sealed types] Extra and spurious error messages with faulty type sealing
+	public void testIssue3007() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed class X extends Y<String> permits Y {
+							int yield () {
+								return this.yield();
+							}
+						}
+
+						sealed class Y<T> extends X permits X, Z {
+
+						}
+
+						final class Z extends Y<String> {}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public sealed class X extends Y<String> permits Y {\n" +
+				"	                    ^\n" +
+				"The hierarchy of the type X is inconsistent\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 7)\n" +
+				"	sealed class Y<T> extends X permits X, Z {\n" +
+				"	                          ^\n" +
+				"Cycle detected: a cycle exists in the type hierarchy between Y<T> and X\n" +
+				"----------\n" +
+				"3. ERROR in X.java (at line 11)\n" +
+				"	final class Z extends Y<String> {}\n" +
+				"	            ^\n" +
+				"The hierarchy of the type Z is inconsistent\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3007
+	// [Sealed types] Extra and spurious error messages with faulty type sealing
+	public void testIssue3007_2() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public class X extends Y<String> {
+							int yield () {
+								return this.yield();
+							}
+						}
+
+						class Y<T> extends X {
+
+						}
+
+						final class Z extends Y<String> {}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public class X extends Y<String> {\n" +
+				"	             ^\n" +
+				"The hierarchy of the type X is inconsistent\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 7)\n" +
+				"	class Y<T> extends X {\n" +
+				"	                   ^\n" +
+				"Cycle detected: a cycle exists in the type hierarchy between Y<T> and X\n" +
+				"----------\n" +
+				"3. ERROR in X.java (at line 11)\n" +
+				"	final class Z extends Y<String> {}\n" +
+				"	            ^\n" +
+				"The hierarchy of the type Z is inconsistent\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2709
+	// [Sealed types] Disjointness behavior difference vis a vis javac
+	/* A class named C is disjoint from an interface named I if (i) it is not the case that C <: I, and (ii) one of the following cases applies:
+	– C is freely extensible (§8.1.1.2), and I is sealed, and C is disjoint from all of the permitted direct subclasses and subinterfaces of I.
+	*/
+	public void testIssue2709() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public class X {
+						    sealed interface I permits C1 {}
+						    non-sealed class C1 implements I {}
+						    class C2 extends C1 {}
+						    class C3 {}
+						    {
+						        I i;
+						        i = (I) (C1) null;
+						        i = (I) (C2) null;
+						        i = (I) (C3) null;
+						        i = (C2) (C3) null;
+						        i = (C1) (C3) null;
+						    }
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 10)\n" +
+				"	i = (I) (C3) null;\n" +
+				"	    ^^^^^^^^^^^^^\n" +
+				"Cannot cast from X.C3 to X.I\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 11)\n" +
+				"	i = (C2) (C3) null;\n" +
+				"	    ^^^^^^^^^^^^^^\n" +
+				"Cannot cast from X.C3 to X.C2\n" +
+				"----------\n" +
+				"3. ERROR in X.java (at line 12)\n" +
+				"	i = (C1) (C3) null;\n" +
+				"	    ^^^^^^^^^^^^^^\n" +
+				"Cannot cast from X.C3 to X.C1\n" +
+				"----------\n");
+	}
+
+	public void testJDK8343306() {
+		Runner runner = new Runner();
+		runner.testFiles = new String[] {
+				"X1.java",
+				"""
+				public class X1 {
+				    sealed interface I permits C1 {}
+				    non-sealed class C1 implements I {}
+				    class C2 extends C1 {}
+				    class C3 {}
+				    I m2(int s, C3 c3) {
+				        return switch (s) {
+				            case 0 -> (I) c3;
+				            default -> null;
+				        };
+				    }
+				}
+				"""};
+		runner.expectedCompilerLog =
+				"""
+				----------
+				1. ERROR in X1.java (at line 8)
+					case 0 -> (I) c3;
+					          ^^^^^^
+				Cannot cast from X1.C3 to X1.I
+				----------
+				""";
+		runner.javacTestOptions = JavacHasABug.JavacBug8343306;
+		runner.runNegativeTest();
 	}
 }
